# copilot-visualizer

./: CHANGELOG  copilot-visualizer.cabal  main.html
data/: tikz.latex  timeline.html
examples/gui/: main.html
examples/tikz/: Heater.hs
src/Copilot/: Live.hs  Visualize.hs
src/Copilot/Visualize/: Dynamic.hs  Live.hs  Static.hs  Tikz.hs  Trace.hs  TypedTrace.hs  UntypedTrace.hs
