cabal-version:       >=1.10
name:                copilot-visualizer
version:             4.2
synopsis:            Visualizer for Copilot.
description:
  Visualizer for Copilot.
  .
  Copilot is a stream (i.e., infinite lists) domain-specific language (DSL) in
  Haskell that compiles into embedded C. Copilot contains an interpreter,
  multiple back-end compilers, and other verification tools.
  .
  A tutorial, examples, and other information are available at
  <https://copilot-language.github.io>.

author:              Ivan Perez, Frank Dedden
license:             BSD3
license-file:        LICENSE
maintainer:          Ivan Perez <ivan.perezdominguez@nasa.gov>
homepage:            https://copilot-language.github.io
bug-reports:         https://github.com/Copilot-Language/copilot/issues
stability:           Experimental
category:            Language, Embedded
build-type:          Simple
extra-source-files:  README.md, CHANGELOG

x-curation: uncurated

source-repository head
    type:       git
    location:   https://github.com/Copilot-Language/copilot.git
    subdir:     copilot-visualizer

library

  default-language:  Haskell2010

  hs-source-dirs:    src

  ghc-options:
    -Wall

  build-depends:
    base       >= 4.9   && < 5,
    aeson,
    pretty     >= 1.0   && < 1.2,
    ogma-extra >= 1.6.0 && < 1.7,

    copilot-core        >= 4.2 && < 4.3,
    copilot-interpreter >= 4.2 && < 4.3

  exposed-modules:

    Copilot.Visualize
